@@ -1,6 +1,6 @@
 dnl ---
 dnl configure.in for ecasound
-dnl last modified: 20030428-15
+dnl last modified: 20030529-17
 dnl 
 dnl Many of the tests and macros in this file have been borrowed from 
 dnl other GPL-lisenced packages (Alsaplayer, ALSA, SIP, PyQt, 
@@ -35,8 +35,9 @@ dnl ---
 LIBECASOUND_VERSION=11
 LIBECASOUND_VERSION_AGE=2
 LIBECASOUNDC_VERSION=1
-LIBKVUTILS_VERSION=5
-LIBKVUTILS_VERSION_AGE=1
+LIBECASOUNDC_VERSION_AGE=0
+LIBKVUTILS_VERSION=6
+LIBKVUTILS_VERSION_AGE=2
 
 AC_SUBST(LIBECASOUND_VERSION)
 AC_SUBST(LIBECASOUND_VERSION_AGE)
@@ -621,12 +622,12 @@ AC_ARG_ENABLE(ncurses,
 	      case "$enableval" in
 	        y | yes)
 		  AC_MSG_RESULT(yes)
-		  termcap_library=yes
+		  termcap_library=ncurses
 		;;
 
 		n | no)
 		  AC_MSG_RESULT(no)
-		  termcap_library=no
+		  termcap_library=none
 		;;
         
 		*)
@@ -788,8 +789,14 @@ if test x$enable_sysreadline = xyes; then
      [AC_CHECK_HEADER(readline/history.h,,
        AC_MSG_ERROR([*** readline history headers not installed ***]))])
 
-  AC_CHECK_LIB(readline, main,, AC_MSG_ERROR([*** readline support not installed ***]))
-  AC_CHECK_LIB(history, main,, AC_MSG_ERROR([*** readline history support not installed ***]))
+  if x${termcap_library} = xnone; then
+     readline_extra_libs="";
+  else
+     readline_extra_libs="-l${termcap_library}"
+  fi
+
+  AC_CHECK_LIB(readline, main,, AC_MSG_ERROR([*** readline support not installed ***]), ${readline_extra_libs})
+  AC_CHECK_LIB(history, main,, AC_MSG_ERROR([*** readline history support not installed ***]), ${readline_extra_libs})
   AC_SUBST(ECA_S_READLINE_INCLUDES)
 else
   AC_CONFIG_SUBDIRS(readline-4.0)
@@ -865,6 +872,9 @@ AC_CHECK_FUNCS(sched_get_priority_max)
 AC_CHECK_FUNCS(sched_getparam)
 AC_CHECK_FUNCS(sched_getscheduler)
 AC_CHECK_FUNCS(sched_setscheduler)
+AC_CHECK_FUNCS(pthread_self)
+AC_CHECK_FUNCS(pthread_getschedparam)
+AC_CHECK_FUNCS(pthread_setschedparam)
 AC_CHECK_FUNCS(sigprocmask)
 AC_CHECK_FUNCS(sigwait)
 
