@@ -1,3 +1,8 @@
+2003-05-29  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>
+
+	* kvu_rtcaps.cpp (kvu_set_thread_scheduling): added
+	* library version changed to 6:0:2
+	
 2003-02-13  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>
 
 	* kvu_inttypes.h: file added
